[package]
name = "wasmbuild"
version = "0.0.4"
edition = "2021"
description = "wasmbuild starter"
license = "MIT"
repository = "https://github.com/btwiuse/wasmbuild"
documentation = "https://docs.rs/wasmbuild"

[lib]
crate_type = ["cdylib"]
path = "lib.rs"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.81"
